--- a/Credit_Risk/credit_risk_classification.ipynb
+++ b/Credit_Risk/credit_risk_classification.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the dependencies\n",
+    "# Import the modules\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
